--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <h1 class="title">HACKER NEWS</h1>
 <div *ngFor="let i of recordPage" class="card-container">
-<app-card *ngIf="i" [id]="i"></app-card>
+<app-card *ngIf="ids" [id]="ids[i]"></app-card>
 </div>
 
 <div class="load">
